src/main/java/com/example/demo/error/ErrorCustom.java
package com.example.demo.error;

/**
 * Created by kwongiho on 2017. 6. 26..
 */
public interface ErrorCustom extends ResponseStatus{
    String getResultCode();
    String getErrorCode();
}
